--- a/src/main/resources/com/pooespol/proyecto_2p_poo/Inicio.fxml
+++ b/src/main/resources/com/pooespol/proyecto_2p_poo/Inicio.fxml
@@ -10,16 +10,16 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1240.0" stylesheets="@../../../StylesCSS/Style_Inicio.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="360.0" prefWidth="623.0">
+      <VBox alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="354.0" prefWidth="623.0">
          <children>
             <Label alignment="BOTTOM_CENTER" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="576.0" text="DOLCE" textFill="WHITE">
                <font>
-                  <Font name="Avenir Next Bold" size="120.0" />
+                  <Font name="Bogart Trial Bold" size="120.0" />
                </font>
             </Label>
             <Label alignment="TOP_CENTER" graphicTextGap="0.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="576.0" text="GELATO" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Avenir Next Bold" size="120.0" />
+                  <Font name="Bogart Trial Bold" size="120.0" />
                </font>
                <opaqueInsets>
                   <Insets />
@@ -28,19 +28,22 @@
                   <Insets top="-45.0" />
                </VBox.margin>
             </Label>
-            <Label alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="576.0" text="H E L A D E R Í A" textAlignment="CENTER" textFill="WHITE">
+            <Label alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="65.0" prefWidth="576.0" text="I C E  C R E A M" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="DM Sans Regular" size="50.0" />
                </font>
                <VBox.margin>
-                  <Insets top="-10.0" />
+                  <Insets top="-5.0" />
                </VBox.margin>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
             </Label>
          </children>
       </VBox>
       <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="268.0" prefWidth="636.0">
          <children>
-            <Label alignment="TOP_CENTER" prefHeight="40.0" prefWidth="330.0" textAlignment="CENTER" textFill="RED">
+            <Label fx:id="lblValidar" alignment="TOP_CENTER" prefHeight="40.0" prefWidth="330.0" textAlignment="CENTER" textFill="RED">
                <font>
                   <Font name="DM Sans Regular" size="18.0" />
                </font>
@@ -68,7 +71,7 @@
                   <TextField fx:id="textClave" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="42.0" prefWidth="255.0" />
                </children>
             </HBox>
-            <Button fx:id="btnIniciar" mnemonicParsing="false" prefHeight="53.0" prefWidth="178.0" style="-fx-background-color: white;" text="Iniciar Sesión" textFill="#dfa906">
+            <Button fx:id="btnIniciar" mnemonicParsing="false" prefHeight="53.0" prefWidth="178.0" style="-fx-background-color: white;" text="Iniciar Sesión" textFill="#71945f">
                <font>
                   <Font name="Avenir Next Bold" size="20.0" />
                </font>
