--- a/src/main/resources/com/pooespol/proyecto_2p_poo/Paso2.fxml
+++ b/src/main/resources/com/pooespol/proyecto_2p_poo/Paso2.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.opcion2_proyecto2p.Paso2Controller">
+<VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto_2p_poo.Paso2Controller">
    <children>
       <HBox alignment="BOTTOM_LEFT" prefHeight="143.0" prefWidth="600.0">
          <children>
@@ -22,16 +22,16 @@
             </Text>
          </children>
       </HBox>
-      <HBox alignment="BOTTOM_CENTER" prefHeight="123.0" prefWidth="600.0">
+      <HBox alignment="CENTER" prefHeight="202.0" prefWidth="600.0">
          <children>
-            <GridPane fx:id="paneSabores" prefHeight="128.0" prefWidth="516.0">
+            <GridPane fx:id="paneSabores" prefHeight="187.0" prefWidth="516.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="88.0" minHeight="10.0" prefHeight="46.0" valignment="BOTTOM" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="151.0" minHeight="10.0" prefHeight="77.0" valignment="TOP" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="88.0" minHeight="10.0" prefHeight="47.0" valignment="BOTTOM" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="151.0" minHeight="10.0" prefHeight="140.0" valignment="TOP" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label fx:id="lbSabor1" alignment="TOP_LEFT" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="122.0" text="Sabor 1:">
@@ -44,13 +44,17 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="cmb1" onAction="#sumarValor1" prefHeight="39.0" prefWidth="247.0" GridPane.rowIndex="1" />
-                  <ComboBox fx:id="cmb2" onAction="#sumarValor2" prefHeight="39.0" prefWidth="247.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <ComboBox fx:id="cmb1" onAction="#obtenerPrecio" prefHeight="39.0" prefWidth="247.0" GridPane.rowIndex="1" />
+                  <ComboBox fx:id="cmb2" onAction="#obtenerPrecio" prefHeight="39.0" prefWidth="247.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
          </children>
       </HBox>
-      <HBox fx:id="hbxDinamico" prefHeight="61.0" prefWidth="600.0" />
+      <HBox alignment="CENTER" prefHeight="46.0" prefWidth="600.0">
+         <children>
+            <Label fx:id="errorLabel2" />
+         </children>
+      </HBox>
       <GridPane fx:id="gridAcu_Cont" alignment="BOTTOM_LEFT" layoutX="7.0" layoutY="365.0" prefHeight="58.0" prefWidth="747.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="625.0" minWidth="10.0" prefWidth="425.0" />
@@ -60,7 +64,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Label fx:id="lbAcumulador" alignment="CENTER" prefHeight="17.0" prefWidth="265.0" text="Valor a pagar: ">
+            <Label fx:id="lbAcumulador" alignment="CENTER" prefHeight="17.0" prefWidth="265.0" text="Valor a pagar: 0.0 ">
                <font>
                   <Font size="15.0" />
                </font>
