--- a/src/main/resources/com/pooespol/proyecto_2p_poo/Paso3.fxml
+++ b/src/main/resources/com/pooespol/proyecto_2p_poo/Paso3.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane id="AnchorPane" fx:id="root3" prefHeight="452.0" prefWidth="747.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="com.mycompany.opcion2_proyecto2p.Paso3Controller">
+<AnchorPane id="AnchorPane" fx:id="root3" prefHeight="452.0" prefWidth="747.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="com.pooespol.proyecto_2p_poo.Paso3Controller">
    <children>
       <VBox layoutY="6.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
