--- a/src/main/resources/com/pooespol/proyecto_2p_poo/Paso1.fxml
+++ b/src/main/resources/com/pooespol/proyecto_2p_poo/Paso1.fxml
@@ -1,86 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="452.0" prefWidth="747.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto_2p_poo.Paso1Controller">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="700.0" prefWidth="1240.0" styleClass="mainFxmlClass" stylesheets="@../../../StylesCSS/Style_Paso1.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto_2p_poo.Paso1Controller">
    <children>
       <VBox fx:id="root2" layoutX="101.0" layoutY="27.0" prefHeight="452.0" prefWidth="754.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox fx:id="hboxTitulo" alignment="BOTTOM_LEFT" prefHeight="122.0" prefWidth="754.0">
+            <HBox>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
                <children>
-                  <Text fx:id="tstPaso1" strokeType="OUTSIDE" strokeWidth="0.0" text="Paso 1: Escoge tu Base" wrappingWidth="520.115234375">
-                     <font>
-                        <Font name="Consolas" size="43.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="30.0" />
-                     </HBox.margin>
-                  </Text>
+                  <VBox alignment="BOTTOM_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="228.0" prefWidth="876.0" />
+                  <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="148.0" prefWidth="313.0">
+                     <children>
+                        <Label fx:id="lbAcumulador" alignment="CENTER" prefHeight="47.0" prefWidth="304.0" text="Valor a pagar:  0.0" textFill="WHITE">
+                           <font>
+                              <Font name="Avenir Next Bold" size="32.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
                </children>
             </HBox>
-            <HBox fx:id="hbxBtns" alignment="BOTTOM_CENTER" prefHeight="153.0" prefWidth="754.0">
+            <HBox fx:id="hbxBtns" alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="177.0" prefWidth="956.0" spacing="91.0">
                <children>
-                  <Button fx:id="btnYogurt" mnemonicParsing="false" onAction="#seleccionarBoton" prefHeight="86.0" prefWidth="135.0" text="yogurt" wrapText="true" />
-                  <Button fx:id="btnHelado" mnemonicParsing="false" onAction="#seleccionarBoton" prefHeight="86.0" prefWidth="135.0" text="helado" wrapText="true">
+                  <Button fx:id="btnYogurt" mnemonicParsing="false" onAction="#seleccionarBoton" prefHeight="59.0" prefWidth="180.0" style="-fx-background-color: white;" text="Yogurt" textFill="#592c5d" wrapText="true">
+                     <font>
+                        <Font name="Avenir Next Bold" size="28.0" />
+                     </font></Button>
+                  <Button fx:id="btnHelado" mnemonicParsing="false" onAction="#seleccionarBoton" prefHeight="59.0" prefWidth="180.0" style="-fx-background-color: white;" text="Helado" textFill="#592c5d" wrapText="true">
                      <HBox.margin>
-                        <Insets left="60.0" right="60.0" />
+                        <Insets />
                      </HBox.margin>
+                     <font>
+                        <Font name="Avenir Next Bold" size="28.0" />
+                     </font>
                   </Button>
-                  <Button fx:id="btnVegano" mnemonicParsing="false" onAction="#seleccionarBoton" prefHeight="86.0" prefWidth="135.0" text="vegano" />
+                  <Button fx:id="btnVegano" mnemonicParsing="false" onAction="#seleccionarBoton" prefHeight="59.0" prefWidth="180.0" style="-fx-background-color: white;" text="Vegano" textFill="#592c5d">
+                     <font>
+                        <Font name="Avenir Next Bold" size="28.0" />
+                     </font></Button>
                </children>
             </HBox>
-            <HBox fx:id="hboxPrecios" alignment="CENTER" prefHeight="35.0" prefWidth="754.0">
+            <HBox fx:id="hboxPrecios" alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="130.0" prefWidth="956.0" spacing="175.0" />
+            <HBox alignment="CENTER_RIGHT">
                <children>
-                  <Label fx:id="lbPrecioYogurt" text="1.50">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lbPrecioHelado" alignment="CENTER" prefHeight="17.0" prefWidth="363.0" text="2.00">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lbPrecioVegano" text="2.50">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Label>
+                  <HBox fx:id="hbxDinamico" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="146.0" prefWidth="744.0" spacing="160.0">
+                     <children>
+                        <Label fx:id="errorLabel" alignment="CENTER" prefHeight="47.0" prefWidth="592.0" textFill="WHITE">
+                           <font>
+                              <Font name="Avenir Next Bold" size="30.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="146.0" prefWidth="387.0">
+                     <children>
+                        <Button fx:id="btnContinuar" mnemonicParsing="false" onAction="#cambiarAPaso2" prefHeight="58.0" prefWidth="175.0" style="-fx-background-color: white;" text="Continuar" textFill="#592c5d">
+                           <font>
+                              <Font name="Avenir Next Bold" size="28.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
             </HBox>
-            <HBox fx:id="hbxDinamico" alignment="CENTER" prefHeight="62.0" prefWidth="754.0">
-               <children>
-                  <Label fx:id="errorLabel" />
-               </children></HBox>
          </children>
       </VBox>
-      <GridPane fx:id="gridAcu_Cont" alignment="BOTTOM_LEFT" layoutX="7.0" layoutY="365.0" prefHeight="58.0" prefWidth="747.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="625.0" minWidth="10.0" prefWidth="566.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="554.0" minWidth="10.0" prefWidth="181.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label fx:id="lbAcumulador" alignment="CENTER" prefHeight="17.0" prefWidth="265.0" text="Valor a pagar:  0.0">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <Button fx:id="btnContinuar" mnemonicParsing="false" onAction="#cambiarAPaso2" prefHeight="25.0" prefWidth="113.0" text="Continuar" GridPane.columnIndex="1" />
-         </children>
-      </GridPane>
    </children>
 </AnchorPane>
