--- a/src/main/resources/com/pooespol/proyecto_2p_poo/Paso2.fxml
+++ b/src/main/resources/com/pooespol/proyecto_2p_poo/Paso2.fxml
@@ -3,74 +3,66 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto_2p_poo.Paso2Controller">
+<VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1240.0" stylesheets="@../../../StylesCSS/Style_Paso2.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto_2p_poo.Paso2Controller">
    <children>
-      <HBox alignment="BOTTOM_LEFT" prefHeight="143.0" prefWidth="600.0">
+      <HBox prefHeight="200.0" prefWidth="1240.0">
          <children>
-            <Text fx:id="tctPaso2" strokeType="OUTSIDE" strokeWidth="0.0" text="Paso 2: Elige los sabores" textAlignment="RIGHT" wrappingWidth="471.22509765625">
-               <font>
-                  <Font size="43.0" />
-               </font>
-            </Text>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="202.0" prefWidth="600.0">
-         <children>
-            <GridPane fx:id="paneSabores" prefHeight="187.0" prefWidth="516.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="88.0" minHeight="10.0" prefHeight="47.0" valignment="BOTTOM" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="151.0" minHeight="10.0" prefHeight="140.0" valignment="TOP" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <VBox prefHeight="200.0" prefWidth="876.0" />
+            <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="148.0" prefWidth="313.0">
                <children>
-                  <Label fx:id="lbSabor1" alignment="TOP_LEFT" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="122.0" text="Sabor 1:">
+                  <Label fx:id="lbAcumulador" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="47.0" prefWidth="304.0" text="Valor a pagar: 0.0 " textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="15.0" />
+                        <Font name="Avenir Next Bold" size="32.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lbSabor2" prefHeight="41.0" prefWidth="98.0" text="Sabor 2:" GridPane.columnIndex="1">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="cmb1" onAction="#obtenerPrecio" prefHeight="39.0" prefWidth="247.0" GridPane.rowIndex="1" />
-                  <ComboBox fx:id="cmb2" onAction="#obtenerPrecio" prefHeight="39.0" prefWidth="247.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
-            </GridPane>
+            </VBox>
          </children>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="46.0" prefWidth="600.0">
+      <HBox alignment="CENTER" prefHeight="138.0" prefWidth="1240.0">
          <children>
-            <Label fx:id="errorLabel2" />
+            <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="104.0" prefWidth="476.0" spacing="10.0">
+               <children>
+                  <Label fx:id="lbSabor1" alignment="TOP_LEFT" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="122.0" text="Sabor 1:" textFill="WHITE">
+                     <font>
+                        <Font name="Avenir Next Bold" size="28.0" />
+                     </font>
+                  </Label>
+                  <ComboBox fx:id="cmb1" onAction="#obtenerPrecio" prefHeight="50.0" prefWidth="408.0" promptText="Elige un sabor" style="-fx-background-color: white; -fx-font-family: Metropolis; -fx-font-size: 18 px;" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="129.0" prefWidth="577.0" spacing="10.0">
+               <children>
+                  <Label fx:id="lbSabor2" prefHeight="30.0" prefWidth="122.0" text="Sabor 2:" textFill="WHITE">
+                     <font>
+                        <Font name="Avenir Next Bold" size="28.0" />
+                     </font>
+                  </Label>
+                  <ComboBox fx:id="cmb2" onAction="#obtenerPrecio" prefHeight="50.0" prefWidth="408.0" promptText="Elige un sabor" style="-fx-background-color: white; -fx-font-family: Metropolis; -fx-font-size: 18 px;" />
+               </children>
+            </VBox>
          </children>
       </HBox>
-      <GridPane fx:id="gridAcu_Cont" alignment="BOTTOM_LEFT" layoutX="7.0" layoutY="365.0" prefHeight="58.0" prefWidth="747.0">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="625.0" minWidth="10.0" prefWidth="425.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="554.0" minWidth="10.0" prefWidth="181.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         </rowConstraints>
+      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="71.0" prefWidth="1086.0">
          <children>
-            <Label fx:id="lbAcumulador" alignment="CENTER" prefHeight="17.0" prefWidth="265.0" text="Valor a pagar: 0.0 ">
+            <Label fx:id="errorLabel2" textFill="WHITE">
                <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <Button fx:id="btnContinuar2" mnemonicParsing="false" onAction="#cambiarAPaso3" prefHeight="25.0" prefWidth="113.0" text="Continuar" GridPane.columnIndex="1" />
+                  <Font name="Avenir Next Bold" size="30.0" />
+               </font></Label>
          </children>
-      </GridPane>
+      </HBox>
+      <HBox alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="234.0" prefWidth="1175.0">
+         <children>
+            <Button fx:id="btnContinuar2" mnemonicParsing="false" onAction="#cambiarAPaso3" prefHeight="58.0" prefWidth="175.0" style="-fx-background-color: white;" text="Continuar" textFill="#592c5d">
+               <font>
+                  <Font name="Avenir Next Bold" size="28.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </VBox>
