--- a/src/main/resources/com/pooespol/proyecto_2p_poo/Paso3.fxml
+++ b/src/main/resources/com/pooespol/proyecto_2p_poo/Paso3.fxml
@@ -3,48 +3,44 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" fx:id="root3" prefHeight="452.0" prefWidth="747.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="com.pooespol.proyecto_2p_poo.Paso3Controller">
+<AnchorPane id="AnchorPane" fx:id="root3" prefHeight="700.0" prefWidth="1240.0" stylesheets="@../../../StylesCSS/Style_Paso3.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto_2p_poo.Paso3Controller">
    <children>
       <VBox layoutY="6.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox fx:id="paneTxt3" alignment="BOTTOM_LEFT" prefHeight="100.0" prefWidth="200.0">
+            <HBox fx:id="paneTxt3" prefHeight="207.0" prefWidth="1240.0">
                <children>
-                  <Text fx:id="txt3" strokeType="OUTSIDE" strokeWidth="0.0" text="Paso 3: Elige los toppings" textAlignment="RIGHT" wrappingWidth="493.115234375">
-                     <font>
-                        <Font name="Consolas" size="43.0" />
-                     </font>
-                  </Text>
-               </children>
-            </HBox>
-            <VBox fx:id="paneToppings" prefHeight="263.0" prefWidth="747.0" />
-            <HBox fx:id="paneEstaticos" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <GridPane fx:id="gridAcu_Cont" alignment="BOTTOM_LEFT" prefHeight="58.0" prefWidth="747.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="625.0" minWidth="10.0" prefWidth="566.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="554.0" minWidth="10.0" prefWidth="181.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
+                  <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="876.0" />
+                  <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="148.0" prefWidth="313.0">
                      <children>
-                        <Label fx:id="lbAcumulador" alignment="CENTER" prefHeight="17.0" prefWidth="265.0" text="Valor a pagar: ">
+                        <Label fx:id="lbAcumulador" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="47.0" prefWidth="386.0" text="Valor a pagar:  0.0" textFill="WHITE">
                            <font>
-                              <Font size="15.0" />
+                              <Font name="Avenir Next Bold" size="32.0" />
                            </font>
                         </Label>
-                        <Button fx:id="btnContinuar" mnemonicParsing="false" onAction="#cambiarAPasoPago" prefHeight="25.0" prefWidth="113.0" text="Continuar" GridPane.columnIndex="1" />
                      </children>
-                  </GridPane>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox fx:id="paneEstaticos" prefHeight="442.0" prefWidth="1240.0">
+               <children>
+                  <VBox alignment="CENTER_RIGHT" prefHeight="183.0" prefWidth="691.0">
+                     <children>
+                        <VBox fx:id="paneToppings" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="442.0" prefWidth="580.0" style="-fx-font-family: Avenir Next; -fx-font-size: 26 px;" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="482.0">
+                     <children>
+                        <Button fx:id="btnContinuar" mnemonicParsing="false" onAction="#cambiarAPasoPago" prefHeight="58.0" prefWidth="175.0" style="-fx-background-color: white;" text="Continuar" textFill="#592c5d">
+                           <font>
+                              <Font name="Avenir Next Bold" size="28.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </VBox>
                </children>
             </HBox>
          </children>
