--- a/src/main/resources/com/pooespol/proyecto_2p_poo/PedidoGenerado.fxml
+++ b/src/main/resources/com/pooespol/proyecto_2p_poo/PedidoGenerado.fxml
@@ -2,42 +2,53 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox id="AnchorPane" prefHeight="700.0" prefWidth="1240.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="com.pooespol.proyecto_2p_poo.PedidoGeneradoController">
+<VBox id="AnchorPane" alignment="CENTER" prefHeight="700.0" prefWidth="1240.0" stylesheets="@../../../StylesCSS/Style_Generado.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto_2p_poo.PedidoGeneradoController">
    <children>
-      <HBox alignment="BOTTOM_LEFT" prefHeight="250.0" prefWidth="1240.0">
+      <VBox alignment="CENTER" prefHeight="376.0" prefWidth="1240.0">
          <children>
-            <Label fx:id="lbPedido" prefHeight="39.0" prefWidth="606.0" text="Tu pedido es el #4527. Te llamaremos cuando esté listo.">
+            <Label fx:id="lbPedido1" alignment="CENTER" prefHeight="97.0" prefWidth="698.0" text="Tu pedido es el">
                <font>
-                  <Font name="Arial Bold Italic" size="21.0" />
+                  <Font name="Bogart Trial Bold" size="80.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="-30.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="lbPedido2" alignment="CENTER" prefHeight="39.0" prefWidth="606.0" text="#4527">
+               <font>
+                  <Font name="Avenir Next Bold" size="84.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="-20.0" />
+               </VBox.margin>
+            </Label>
+            <Label alignment="CENTER" prefHeight="87.0" prefWidth="818.0" text="Te llamaremos">
+               <font>
+                  <Font name="Bogart Trial Bold" size="53.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" prefHeight="130.0" prefWidth="1121.0" text="cuando esté listo">
+               <font>
+                  <Font name="Bogart Trial Bold" size="53.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="-50.0" />
+               </VBox.margin>
+            </Label>
+         </children>
+      </VBox>
+      <HBox alignment="CENTER" prefHeight="120.0" prefWidth="1240.0">
+         <children>
+            <Label fx:id="lbClose" alignment="CENTER" prefHeight="55.0" prefWidth="763.0" text="Esta ventana se cerrará en 4 segundos...">
+               <font>
+                  <Font name="Avenir Next Bold" size="30.0" />
                </font>
             </Label>
          </children>
-         <padding>
-            <Insets bottom="30.0" left="100.0" />
-         </padding>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="421.0" prefWidth="1240.0">
-         <children>
-            <ImageView fx:id="gif" fitHeight="392.0" fitWidth="690.0" pickOnBounds="true" preserveRatio="true" />
-         </children>
-      </HBox>
-      <HBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="1240.0">
-         <children>
-            <Label fx:id="lbClose" prefHeight="43.0" prefWidth="448.0" text="Esta ventana se cerrará en 4 segundos...">
-               <font>
-                  <Font name="Arial Bold Italic" size="21.0" />
-               </font>
-            </Label>
-         </children>
-         <padding>
-            <Insets right="100.0" top="20.0" />
-         </padding>
       </HBox>
    </children>
 </VBox>
